.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glbankstmtdist__c.object
<CustomObject>
    <description>glbankstmtdist__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glbankstmtdist_glbankstmtd__c  &amp; &apos;&apos; &amp;   TEXT(rstkf__glbankstmtdist_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_acctdate__c</fullName>
        <description>Accounting Date</description>
        <inlineHelpText>The effective date on which the transaction hits the GL. It is initially set to the Date per Bank on the bank statement line that led to this posting, but it may be reset by the posting process if the period in which Date per Bank falls is closed.</inlineHelpText>
        <label>Accounting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_cramt__c</fullName>
        <description>Credit Amount</description>
        <inlineHelpText>The amount credited to GL Account.</inlineHelpText>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_dimval1__c</fullName>
        <description>Dimension 1 Value</description>
        <inlineHelpText>The user may assign dimension values (from a drop-down menu) when entering or maintaining any distribution line. If the user entered no value for Dimension 1, this is blank. Otherwise, it’s the value entered. It will flow through to the GL.</inlineHelpText>
        <label>Dimension 1 Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_dimval2__c</fullName>
        <description>Dimension 2 Value</description>
        <inlineHelpText>The user may assign dimension values (from a drop-down menu) when entering or maintaining any distribution line. If the user entered no value for Dimension 2, this is blank. Otherwise, it’s the value entered. It will flow through to the GL.</inlineHelpText>
        <label>Dimension 2 Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_dimval3__c</fullName>
        <description>Dimension 3 Value</description>
        <inlineHelpText>The user may assign dimension values (from a drop-down menu) when entering or maintaining any distribution line. If the user entered no value for Dimension 3, this is blank. Otherwise, it’s the value entered. It will flow through to the GL.</inlineHelpText>
        <label>Dimension 3 Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Division</description>
        <inlineHelpText>The user may assign divisions (selected from a drop-down menu) to distribution lines when entering or maintaining them. If the user entered no division, this is blank. Otherwise, it’s a link to the division entered. It will flow through to the GL.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>Statement GL Distribution</relationshipLabel>
        <relationshipName>Statement_GL_Distribution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_dramt__c</fullName>
        <description>Debit Amount</description>
        <inlineHelpText>The amount debited to GL Account.</inlineHelpText>
        <label>Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GL Account</description>
        <inlineHelpText>A link to the GL account that will receive the posting.</inlineHelpText>
        <label>GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Statement GL Distribution</relationshipLabel>
        <relationshipName>Statement_GL_Distribution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_glbankstmtd__c</fullName>
        <description>Statement Line</description>
        <inlineHelpText>This is a link to the statement line from which this posting is derived.</inlineHelpText>
        <label>Statement Line</label>
        <referenceTo>rstkf__glbankstmtd__c</referenceTo>
        <relationshipLabel>Statement GL Distribution</relationshipLabel>
        <relationshipName>glbankstmtdists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_gltxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GL Transaction</description>
        <inlineHelpText>A link to the actual GL transaction derived from this record. Blank if this record has not yet been posted.</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstkf__gltxn__c</referenceTo>
        <relationshipLabel>Statement GL Distribution</relationshipLabel>
        <relationshipName>Statement_GL_Distribution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_isposted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Posted?</description>
        <inlineHelpText>Checked if this transaction has been posted to the GL.</inlineHelpText>
        <label>Posted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_isreversal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Posting Is Reversal?</description>
        <inlineHelpText>For future use. If checked, this record reverses the record linked to by Reverses This Posting.</inlineHelpText>
        <label>Posting Is Reversal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_isreversed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Posting Reversed?</description>
        <inlineHelpText>For future use. If checked, this record has been reversed by the record linked to by Reversed By This Posting.</inlineHelpText>
        <label>Posting Reversed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_posteddramt__c</fullName>
        <formula>IF(( rstkf__glbankstmtdist_isposted__c &amp;&amp;  NOT( rstkf__glbankstmtdist_isreversed__c )),  rstkf__glbankstmtdist_dramt__c , 0)</formula>
        <inlineHelpText>For future use. If this transaction has been posted but reversed, this field will be zero. It will also be zero if the transaction has not been posted. If the transaction has been posted and not reversed, it will be the amount of the posted credit.</inlineHelpText>
        <label>Posted DR Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project</description>
        <inlineHelpText>The user may assign projects (selected from a drop-down menu) to distribution lines when entering or maintaining them. If the user entered no project, this is blank. Otherwise, it’s a link to the project entered. It will flow through to the GL.</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>Statement GL Distribution</relationshipLabel>
        <relationshipName>Statement_GL_Distribution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_reversedbythis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reversed By This Posting</description>
        <inlineHelpText>For future use. If not blank, this is a link to another bank statement account distribution record which has reversed this posting.</inlineHelpText>
        <label>Reversed By This Posting</label>
        <referenceTo>rstkf__glbankstmtdist__c</referenceTo>
        <relationshipLabel>Statement GL Distribution (Reversed By This Posting)</relationshipLabel>
        <relationshipName>Statement_GL_Distribution1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_reversesthis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reverses This Posting</description>
        <inlineHelpText>For future use. If not blank, this is a link to another bank statement account distribution record which this record reverses.</inlineHelpText>
        <label>Reverses This Posting</label>
        <referenceTo>rstkf__glbankstmtdist__c</referenceTo>
        <relationshipLabel>Statement GL Distribution</relationshipLabel>
        <relationshipName>Statement_GL_Distribution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_seq__c</fullName>
        <description>Sequence</description>
        <inlineHelpText>The only use of this field is to distinguish between the various postings derived from a single bank statement line.</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_source__c</fullName>
        <description>Source</description>
        <inlineHelpText>The standard Rootstock GL transaction type for this kind of posting.</inlineHelpText>
        <label>Source</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtdist_trandate__c</fullName>
        <description>Transaction Date</description>
        <inlineHelpText>This is the Date per Bank on the bank statement line that led to this posting.</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>Triggeroptions</description>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Statement GL Distribution</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glbankstmtdist_glacct__c</columns>
        <columns>rstkf__glbankstmtdist_dramt__c</columns>
        <columns>rstkf__glbankstmtdist_cramt__c</columns>
        <columns>rstkf__glbankstmtdist_acctdate__c</columns>
        <columns>rstkf__glbankstmtdist_isposted__c</columns>
        <columns>rstkf__glbankstmtdist_isreversal__c</columns>
        <columns>rstkf__glbankstmtdist_isreversed__c</columns>
        <columns>rstkf__glbankstmtdist_reversedbythis__c</columns>
        <columns>rstkf__glbankstmtdist_reversesthis__c</columns>
        <columns>rstkf__glbankstmtdist_seq__c</columns>
        <columns>rstkf__glbankstmtdist_glbankstmtd__c</columns>
        <columns>rstkf__glbankstmtdist_trandate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Statement GL Distribution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statement GL Distribution</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>